package org.example.proto.Domain;

public class Reiziger {
    private String voornaam;
    private String achternaam;
    private String geboortedatum;
}
